[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/objects/cube/menu_cube.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/objects/cylinder/menu_cylinder.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/objects.gd" type="Script" id=3]
[ext_resource path="res://scripts/build_menu.gd" type="Script" id=4]
[ext_resource path="res://scenes/objects/cannon/menu_cannon.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/timer.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="build_menu" type="Spatial"]
script = ExtResource( 4 )

[node name="objects" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, -4, -10 )
visible = false
script = ExtResource( 3 )

[node name="menu_cube" parent="objects" instance=ExtResource( 1 )]

[node name="menu_cannon" parent="objects" instance=ExtResource( 5 )]
visible = false
cast_shadow = 0

[node name="menu_cylinder" parent="objects" instance=ExtResource( 2 )]

[node name="controls" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="Button" parent="controls"]
margin_left = 155.914
margin_top = 391.642
margin_right = 305.914
margin_bottom = 541.641
custom_styles/focus = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="controls/left"]
polygon = PoolVector2Array( 150, 0, 150, 150, 0, 75 )

[node name="right" type="Button" parent="controls"]
margin_left = 714.014
margin_top = 386.995
margin_right = 864.014
margin_bottom = 536.995
custom_styles/focus = SubResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="controls/right"]
polygon = PoolVector2Array( 0, 0, 150, 75, 0, 150 )

[node name="select" type="Button" parent="controls"]
margin_left = 360.672
margin_top = 339.161
margin_right = 660.672
margin_bottom = 589.161
custom_styles/focus = SubResource( 3 )
action_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="undo" type="Button" parent="controls"]
visible = false
margin_left = 924.0
margin_right = 1024.0
margin_bottom = 100.0
text = "Undo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Timer" parent="timer"]
wait_time = 30.0
one_shot = true

[node name="timer_label" type="RichTextLabel" parent="timer"]
margin_left = 483.0
margin_top = 15.0
margin_right = 513.0
margin_bottom = 45.0
rect_scale = Vector2( 2, 2 )
text = "30
"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="controls/left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="controls/right" to="." method="_on_right_pressed"]
[connection signal="button_down" from="controls/select" to="." method="_on_select_button_down"]
[connection signal="button_up" from="controls/select" to="." method="_on_select_button_up"]
[connection signal="button_down" from="controls/undo" to="." method="_on_undo_button_down"]
[connection signal="button_up" from="controls/undo" to="." method="_on_undo_button_up"]
[connection signal="timeout" from="timer/timer" to="." method="_on_timer_timeout"]
